「自动和谐」的教程页面

--- a/BCD/HisTutPage/index.html
+++ b/BCD/HisTutPage/index.html
@@ -4,61 +4,7 @@
         <title>历史记录使用方法</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        
-        <style>
-            * { margin: 0; padding: 0; }
-            body { 
-                font-family: "Roboto", UILanguageFont, Arial, sans-serif ;
-                background: #fdfdfd;
-            }
-            .description h1 {
-                background: #6cf;
-                color: #fff;
-                padding: 70px 40px 28px 20px;
-                font-weight: lighter;
-            }
-            .description p {
-                margin: 20px 10px;
-                color: #777;
-                letter-spacing: 0.38px;
-            }
-            section { 
-                margin: 45px 16px; 
-                border-top: 0.3px #ddd solid;
-            }
-            section h4 {
-                margin-top: 24px;
-                font-weight: lighter;
-                font-size: 125%;
-                letter-spacing: 0.38px;
-            }
-            .image-container {
-                text-align: center;
-                padding: 0 16px;
-                margin: 30px 0;
-            }
-            .image-container img {
-                width: 100%;
-                box-shadow: 1px 1px 2px #555;
-            }
-            .image-container p {
-                color: #777;
-                letter-spacing: 0.38px;
-                margin-top: 16px;
-                font-size: 75%;
-            }
-            a {
-                display: block;
-                text-align: center;
-                text-decoration: none;
-                color: #ddd;
-                background: #555;
-                width: 100%;
-                height: 100px;
-                line-height: 100px;
-                font-size: 150%;
-            }
-        </style>
+        <link rel="stylesheet" href="style.css">
     </head>
 
     <body>
@@ -122,6 +68,12 @@
             </div>
         </section>
 
-        <a href="#top">返回顶部</a>
+        <section>
+            <h4><a href="AutoHide.html">关于「自动和谐」功能 ➜</a></h4>
+        </section>
+
+        <div class="go-back">
+            <a href="#top">返回顶部</a>            
+        </div>
     </body>
 </html>
