--- a/BCD/HisTutPage/AboutWaifu2x.html
+++ b/BCD/HisTutPage/AboutWaifu2x.html
@@ -39,13 +39,13 @@
                 <img src="Images/iPhone6Diagram.png" alt="iphone 6 diagram">
                 <p>注意这只是 iPhone 6 上的测试效果</p>
             </div>
-            <h4>如果用 y 表示运行时间，x 表示图片高度，那么二者的关系可以表示为：</h4>
-            <h4 style="text-align: center">y = 19.334e<sup>0.0028x</sup></h4>
+            <h4>如果用 y 表示运行时间，x 表示图片高度 * 宽度，那么二者的关系可以表示为：</h4>
+            <h4 style="text-align: center">y = 0.0002x + 11.19</sup></h4>
             <h4>
                 无论是从这个式子还是从图上看都可以很轻易的看出「无损放大」需要的时间是很长的，一次放大操作消耗掉1分多钟的时间是很正常的，要是放大个 1080 的我得等上5分钟，所以在放大的时候请耐心等待。我也会通过这个式子给出大致需要等待的时间。
             </h4>
             <h4>
-                不过这毕竟只是在我的 iPhone 6 上运行的结果，在其他机型上需要的时间我并没有尝试过，所以在各位完成放大操作后 App 会将你的手机型号、图片尺寸和运行时间传到服务器上。所以各位没事儿的时候可以多用用这个功能。
+                不过这毕竟只是在我的<span style="text-decoration: line-through">老旧不堪快退休了的</span> iPhone 6 上运行的结果，在其他机型上需要的时间我并没有尝试过，所以在各位完成放大操作后 App 会将你的手机型号、图片尺寸和运行时间传到服务器上。所以各位没事儿的时候可以多用用这个功能。
             </h4>
         </section>
 
@@ -56,8 +56,15 @@
                 <img src="Images/boom.png" alt="app booms">
             </div>
             <h4>
-                所以为了不让 App 崩掉，同时也为了不让等待时间无限延长，我决定把放大的图片的高度上限设定为 1200
+                所以为了不让 App 崩掉，同时也为了不让等待时间无限延长，我决定把放大的图片的长宽上限设定为 1200。
             </h4>
+            <h4>
+                不过有一点很神奇，就是当图片太小的时候这模型也会崩。具体原因我感觉应该是 Input type 的锅：
+            </h4>
+            <div class="image-container">
+                <img src="Images/Input.png" alt="input type image">
+            </div>
+            <h4>因此我将长宽最小值设定为 150。</h4>
         </section>
 
         <section>
