--- a/BCD/HisTutPage/AboutWaifu2x.html
+++ b/BCD/HisTutPage/AboutWaifu2x.html
@@ -10,7 +10,7 @@
     <body>
         <div class="description">
             <h1 id="top">「无损放大」功能的注意事项</h1>
-            <p style="text-decoration: line-through">感觉用 HTML 写 Tutorial 写上瘾了233333</p>
+            <p style="text-decoration: line-through">好想换手机啊啊啊啊……</p>
             <p>
                 「无损放大」这个功能是我和 <i>波诺先生</i> 从最开始就想做的一个功能，当时我还觉得这个功能如果不开个通向 Waifu2x 服务器的 API 的话是完全没法做的，不过好在现在有了 Core ML 这个东西可以让我很简单地在本机实现这个功能。
             </p>
@@ -65,6 +65,9 @@
                 <img src="Images/Input.png" alt="input type image">
             </div>
             <h4>因此我将长宽最小值设定为 150。</h4>
+            <h4>
+                另外就是执行放大操作之后偶尔会出现历史记录崩溃的情况，因为这问题过于灵异所以我暂时没找着啥解决方案，如果历史记录崩了你就把 App 删了重装一遍好了。
+            </h4>
         </section>
 
         <section>
