改一下颜色

--- a/BCD/HisTutPage/index.html
+++ b/BCD/HisTutPage/index.html
@@ -53,7 +53,7 @@
                 <img style="width: 65%; box-shadow: none;" src="Images/5.png" alt="turn down iphone">
                 <p>差不多就这样</p>
             </div>
-            <div class="image-container">                    
+            <div class="image-container">
                 <img src="Images/6.png" alt="display inside">
                 <p>觉得这个解锁方式很奇葩是么？没错我也这么觉得。</p>
             </div>
@@ -66,6 +66,10 @@
             <div class="image-container">
                 <img src="Images/7.png" alt="configure hidden item">
             </div>
+        </section>
+        
+        <section>
+            <h4><a href="AutoHide.html">关于「自动和谐」功能 ➜</a></h4>
         </section>
 
         <div class="go-back">
