第二版无损放大已完成 90%

--- a/BCD/HisTutPage/AboutWaifu2x.html
+++ b/BCD/HisTutPage/AboutWaifu2x.html
@@ -10,61 +10,45 @@
     <body>
         <div class="description">
             <h1 id="top">「无损放大」功能的注意事项</h1>
-            <p style="text-decoration: line-through">好想换手机啊啊啊啊……</p>
+            <p style="text-decoration: line-through">真的好想换手机啊啊啊啊……</p>
             <p>
                 「无损放大」这个功能是我和 <i>波诺先生</i> 从最开始就想做的一个功能，当时我还觉得这个功能如果不开个通向 Waifu2x 服务器的 API 的话是完全没法做的，不过好在现在有了 Core ML 这个东西可以让我很简单地在本机实现这个功能。
-            </p>
-            <p>
-                虽然这个功能现在还比较鸡肋，运行时间和占用内存都是不理想的，但好歹还能用，而且放大效果还是不错的。
             </p>
         </div>
     
         <section>
             <h4>
-                作为第一版无损放大我打算先试试水，完全使用默认设置。具体如下：
+                拖了这么久第二版的无损放大可算是弄完了（笑）
             </h4>
-            <ol>
-                <li>图片风格为动漫风格（所以三次元的图就别拿来放大了）</li>
-                <li>降噪保持 2 级（对于没有噪点的图片有<b>较低可能性</b>会增加噪点）</li>
-                <li>每次放大倍数为 2 倍（以后<b>可能</b>会开发其他放大倍数）</li>
-            </ol>
+            <h4>
+                这次把所有设置都给堆上来了，上个版本放大效果不是很理想的原因是降噪开的太低了，以后如果要放大的话尽量直接选「Lunatic」级别的降噪，也就是最强降噪。
+            </h4>
         </section>
 
         <section>
             <h4>下面是对于运行时间的说明。</h4>
             <h4>
-                我对几个不同尺寸的图片分别进行了测试，记录了他们的尺寸与对应的运行时间，并扔到 Excel 里做了下回归分析，最后得到下面的结果：
+                当看到你们的运行时间的时候我真是惊到了，X 不愧是新机型，比我的 6 强了不是一点半点。
             </h4>
             <div class="image-container">                    
-                <img src="Images/iPhone6Diagram.png" alt="iphone 6 diagram">
-                <p>注意这只是 iPhone 6 上的测试效果</p>
+                <img src="Images/iphone6-x.png" alt="iphone 6 - iPhone X">
+                <p>中间是图片像素数，右边是运行时间</p>
             </div>
-            <h4>如果用 y 表示运行时间，x 表示图片高度 * 宽度，那么二者的关系可以表示为：</h4>
-            <h4 style="text-align: center">y = 0.0002x + 11.19</sup></h4>
             <h4>
-                无论是从这个式子还是从图上看都可以很轻易的看出「无损放大」需要的时间是很长的，一次放大操作消耗掉1分多钟的时间是很正常的，要是放大个 1080 的我得等上5分钟，所以在放大的时候请耐心等待。我也会通过这个式子给出大致需要等待的时间。
-            </h4>
-            <h4>
-                不过这毕竟只是在我的<span style="text-decoration: line-through">老旧不堪快退休了的</span> iPhone 6 上运行的结果，在其他机型上需要的时间我并没有尝试过，所以在各位完成放大操作后 App 会将你的手机型号、图片尺寸和运行时间传到服务器上。所以各位没事儿的时候可以多用用这个功能。
+                在这种情况下我觉得我的时间预测函数已经没有存在的意义了，于是我将其移除了。本来我是打算做个进度条之类的东西来着，后来发现这东西还挺难做的…… 于是这一版就暂时不加进度条了。
             </h4>
         </section>
 
         <section>
             <h4>下面是关于崩溃的说明。</h4>
-            <h4>这个功能是相当吃内存的，所以如果要放大的图片太大的话 App 是会崩溃的。</h4>
-            <div class="image-container">
-                <img src="Images/boom.png" alt="app booms">
-            </div>
             <h4>
-                所以为了不让 App 崩掉，同时也为了不让等待时间无限延长，我决定把放大的图片的长宽上限设定为 1200。
+                在看过你们的运行结果后我已经不知道要把上限设定成多少了，于是我决定不设定上限，崩不崩一听天命好了。
             </h4>
-            <h4>
-                不过有一点很神奇，就是当图片太小的时候这模型也会崩。具体原因我感觉应该是 Input type 的锅：
-            </h4>
+            <h4>由于 Input type：</h4>
             <div class="image-container">
                 <img src="Images/Input.png" alt="input type image">
             </div>
-            <h4>因此我将长宽最小值设定为 150。</h4>
+            <h4>因此长宽最小值保持为 150。</h4>
             <h4>
                 另外就是执行放大操作之后偶尔会出现历史记录崩溃的情况，因为这问题过于灵异所以我暂时没找着啥解决方案，如果历史记录崩了你就把 App 删了重装一遍好了。
             </h4>
