--- a/BCD/HisTutPage/index.html
+++ b/BCD/HisTutPage/index.html
@@ -16,7 +16,7 @@
         </div>
         
         <section>
-            <h4>你的历史记录差不多应该长这个样子：</h4>
+            <h4>你的历史记录差不多应该长这个样子</h4>
             <div class="image-container">
                 <img src="Images/1.png" alt="display history list">
             </div>
