--- a/BCD/HisTutPage/AboutWaifu2x.html
+++ b/BCD/HisTutPage/AboutWaifu2x.html
@@ -10,47 +10,33 @@
     <body>
         <div class="description">
             <h1 id="top">「无损放大」功能的注意事项</h1>
-            <p style="text-decoration: line-through">真的好想换手机啊啊啊啊……</p>
             <p>
                 「无损放大」这个功能是我和 <i>波诺先生</i> 从最开始就想做的一个功能，当时我还觉得这个功能如果不开个通向 Waifu2x 服务器的 API 的话是完全没法做的，不过好在现在有了 Core ML 这个东西可以让我很简单地在本机实现这个功能。
             </p>
         </div>
-    
-        <section>
-            <h4>
-                拖了这么久第二版的无损放大可算是弄完了（笑）
-            </h4>
-            <h4>
-                这次把所有设置都给堆上来了，上个版本放大效果不是很理想的原因是降噪开的太低了，以后如果要放大的话尽量直接选「Lunatic」级别的降噪，也就是最强降噪。
-            </h4>
-        </section>
 
         <section>
             <h4>下面是对于运行时间的说明。</h4>
             <h4>
-                当看到你们的运行时间的时候我真是惊到了，X 不愧是新机型，比我的 6 强了不是一点半点。
+                如果你的手机是 iPhone 6 之类的老机型的话你会发现运行时间相当长，有时甚至会长达数分钟，所以尽量做好心理准备；
             </h4>
-            <div class="image-container">                    
-                <img src="Images/iphone6-x.png" alt="iphone 6 - iPhone X">
-                <p>中间是图片像素数，右边是运行时间</p>
-            </div>
             <h4>
-                在这种情况下我觉得我的时间预测函数已经没有存在的意义了，于是我将其移除了。本来我是打算做个进度条之类的东西来着，后来发现这东西还挺难做的…… 于是这一版就暂时不加进度条了。
+                而对于之后出的新机型来说运行速度就会缩短很多了，甚至可以比 iPhone 6 快一个数量级。
             </h4>
         </section>
 
         <section>
             <h4>下面是关于崩溃的说明。</h4>
             <h4>
-                在看过你们的运行结果后我已经不知道要把上限设定成多少了，于是我决定不设定上限，崩不崩一听天命好了。
+                因为我并不清楚各个机型的放大极限在哪里，所以就不限定图片尺寸最大值了。
             </h4>
             <h4>由于 Input type：</h4>
             <div class="image-container">
                 <img src="Images/Input.png" alt="input type image">
             </div>
-            <h4>因此长宽最小值保持为 150。</h4>
+            <h4>因此长宽最小值为 150。</h4>
             <h4>
-                另外就是执行放大操作之后偶尔会出现历史记录崩溃的情况，因为这问题过于灵异所以我暂时没找着啥解决方案，如果历史记录崩了你就把 App 删了重装一遍好了。
+                另外就是执行放大操作之后偶尔会出现历史记录崩溃的情况，因为这问题过于灵异所以我暂时没找到解决方案，如果历史记录崩了你就把 App 删了重装一遍好了。
             </h4>
         </section>
 
