--- a/BCD/HisTutPage/AboutWaifu2x.html
+++ b/BCD/HisTutPage/AboutWaifu2x.html
@@ -11,7 +11,7 @@
         <div class="description">
             <h1 id="top">「无损放大」功能的注意事项</h1>
             <p>
-                「无损放大」这个功能是我和 <i>波诺先生</i> 从最开始就想做的一个功能，当时我还觉得这个功能如果不开个通向 Waifu2x 服务器的 API 的话是完全没法做的，不过好在现在有了 Core ML 这个东西可以让我很简单地在本机实现这个功能。
+                「无损放大」这个功能是我和 <i>波诺先生</i> 从最开始就想做的一个功能，当时我还觉得这个功能如果不开个通向 Waifu2x 服务器的 API 的话是完全没法做的，不过好在现在有了 Core ML 这个东西可以让我很简单地在本机实现这个功能（虽然效果并不是非常好）。
             </p>
         </div>
 
