update about feedback

--- a/BCD/HisTutPage/AboutFeedback.html
+++ b/BCD/HisTutPage/AboutFeedback.html
@@ -55,6 +55,10 @@
         </h4>
     </section>
     
+    <section>
+        <h4><i>另外请自觉遵守国家法律法规</i></h4>
+    </section>
+    
     <div class="go-back">
         <a href="#top">返回顶部</a>            
     </div>
