--- a/BCD/HisTutPage/index.html
+++ b/BCD/HisTutPage/index.html
@@ -69,11 +69,13 @@
         </section>
         
         <section>
-            <h4><a href="AutoHide.html">关于「自动和谐」功能 ➜</a></h4>
+            <h4 align="right">
+                <a href="AutoHide.html">关于「自动和谐」功能 ➜</a>
+            </h4>
         </section>
 
         <div class="go-back">
-            <a href="#top">返回顶部</a>            
+            <a href="#top">返回顶部</a>
         </div>
     </body>
 </html>
