--- a/BCD/HisTutPage/index.html
+++ b/BCD/HisTutPage/index.html
@@ -47,7 +47,7 @@
 
         <section>
             <h4>
-                然后我该怎么显示被隐藏的记录呢？这里我接受了 <i>波诺先生</i> 的颇具创造性的建议：用<b>将手机调转180°，也就是让手机头朝下</b>这个动作解锁解锁历史记录的「里世界」。
+                然后我该怎么显示被隐藏的记录呢？除了快捷键 <kbd>Command</kbd> + <kbd>Shift</kbd> + <kbd>A</kbd> 之外，这里我接受了 <i>波诺先生</i> 颇具创造性的建议：用<b>将手机调转180°，也就是让手机头朝下</b>这个动作解锁解锁历史记录的「里世界」。
             </h4>
             <div class="image-container">                    
                 <img style="width: 65%; box-shadow: none;" src="Images/5.png" alt="turn down iphone">
@@ -67,7 +67,7 @@
                 <img src="Images/7.png" alt="configure hidden item">
             </div>
         </section>
-        
+
         <section>
             <h4 align="right">
                 <a href="AutoHide.html">关于「自动和谐」功能 ➜</a>
